2007-03-18  Paul Lindner  <lindner@mirth.inuus.com>


2007-03-18  Paul Lindner  <lindner@inuus.com>

	* Add more test cases using larger buffer sizes up to and greater
	  than 1MB.

	* Remove unused parameter to item_size_ok()

	* Use a single printf() in usage()

	* Add a failing test for conforming with maximum connections.

2007-03-17
	* crash fix from Thomas van Gulick <thomas@partyflock.nl> in
	  conn_shrink(), passing &ptr, instead of ptr to realloc().

2007-03-05  Paul Lindner  <lindner@inuus.com>
	* Fix a number of places where (s)printf calls were using unsigned
	  or signed formats that did not match their arguments.

	* Add support for stdbool.h and stdint.h to use the bool and
	  uint8_t types.

	* Major refactoring - move API calls for assoc/items/slabs to
	  their own individual header files.  Add apropriate const and
	  static declarations as appropriate.
	
	* Avoid type-punning.  Do a more efficient realloc inside the
	  conn_shrink routine.

        * Fix overflow bug where uninitialized access to slabclass caused
	  size-0 mallocs during slab preallocation.

	* Use EXIT_SUCCESS/EXIT_FAILURE constants.

	* Convert some sprintf calls to snprintf to protect against
	  buffer overflows.

	* Explicitly compare against NULL or zero in many places.

2006-12-23
	* fix expirations of items set with absolute expiration times in
	  the past, before the server's start time.  bug was introduced in
	  1.2.0 with rel_time_t.  Thanks to Adam Dixon
	  <adamtdixon@gmail.com> for the bug report and test case!

2006-11-26
	* Steven Grimm <sgrimm@facebook.com>: Performance improvements:
	  
	  Dynamic sizing of hashtable to reduce collisions on very large
	  caches and conserve memory on small caches.

	  Only reposition items in the LRU queue once a minute, to reduce
	  overhead of accessing extremely frequently-used items.

	  Stop listening for new connections until an existing one closes
	  if we run out of available file descriptors.
